--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ matrix:
 before_script:
   - composer install
   - php app/console doctrine:database:create
-  - php app/console doctrine:database:create --env=test
+  - php app/console doctrine:database:create --env=travis
   - php app/console doctrine:migrations:migrate --no-interaction
-  - php app/console doctrine:migrations:migrate --env=test --no-interaction
+  - php app/console doctrine:migrations:migrate --env=travis --no-interaction
 
-script: phpunit --coverage-text --configuration app/phpunit.travist.xml
+script: phpunit --coverage-text --configuration app/phpunit.travis.xml
